fix(css): overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,10 @@
 .border-none {
     border: none !important;
 }
+
+body {
+    overflow-x: hidden;
+  }
+  html, body {
+    overflow-x: hidden;
+  }
